fix: clean and format code